Closed Bug 583160 Opened 14 years ago Closed 14 years ago

JM: "Assertion failure: script->pics[i].u.get.typeCheckOffset == -distance,"

Categories

(Core :: JavaScript Engine, defect)

x86
macOS
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: gkw, Unassigned)

References

Details

(Keywords: assertion, regression, testcase)

(function() {
  for (a in []) {
    (function() {})
    ([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, h.I])
  }
})()

asserts js debug shell on JM changeset 89964b93d40d with -m at Assertion failure: script->pics[i].u.get.typeCheckOffset == -distance, at ../methodjit/Compiler.cpp:340
A testcase for this bug was automatically identified at js/src/jit-test/tests/jaeger/bug583160.js.
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.