[JAEGER] Relax offset bitfield in PolyIC (bug 583160).